@@ -1200,7 +1200,7 @@ avoid_see_see (char *ptr, char *base)
 /* Output, replace or hide text introducing a reference.  inptr starts on
    the first byte of a sequence introducing a reference and finishes on the
    first (non-whitespace) byte of the reference label. */
-static void
+static int
 scan_reference_marker (REFERENCE *entry)
 {
   /* When preprocess_nodes is Off, we position the cursor on
@@ -1224,6 +1224,15 @@ scan_reference_marker (REFERENCE *entry)
     {
       int previous_word_is_like_see = 0;
 
+      /* Only match "*Note" if it is followed by a whitespace character so that 
+         it will not be recognized if, e.g., it is surrounded in inverted 
+         commas. */
+      if (!strchr (" \t\r\n", inptr[strlen ("*Note")]))
+        {
+          copy_input_to_output (strlen ("*Note:"));
+          return 0;
+        }
+
       /* Cross-references can be generated by four different Texinfo
          commands.  @inforef and @xref output "*Note " in Info format,
          and "See" in HTML and print.  @ref and @pxref output "*note "
@@ -1238,7 +1247,6 @@ scan_reference_marker (REFERENCE *entry)
         write_extra_bytes_to_output ("See", 3);
       else
         {
-
           previous_word_is_like_see = avoid_see_see (inptr, input_start);
 
           if (!previous_word_is_like_see)
@@ -1252,6 +1260,8 @@ scan_reference_marker (REFERENCE *entry)
 
   /* Copy any white space before label. */
   copy_input_to_output (skip_whitespace_and_newlines (inptr));
+
+  return 1;
 }
 
 /* Output reference label and update ENTRY.  INPTR should be on the first
@@ -1697,12 +1707,13 @@ scan_node_contents (FILE_BUFFER *fb, NODE **node_ptr)
             in_parentheses = 1;
 
           save_conversion_state ();
-          scan_reference_marker (entry);
-
-          if (!scan_reference_label (entry)
+          
+          if (!scan_reference_marker (entry)
+              || !scan_reference_label (entry)
               || !scan_reference_target (entry, node, in_parentheses))
             {
-              /* This is not a menu entry or reference.  Do not add to our list. */
+              /* This is not a menu entry or reference.  Do not add to our 
+                 list. */
               char *cur_inptr = inptr;
               reset_conversion ();
               copy_input_to_output (cur_inptr - inptr);
